# city-of-gold

./: .readthedocs.yaml  CMakeLists.txt  README.md  index.json  info.json  pyproject.toml  regressions.xml  requirements.txt
.github/workflows/: debug.yml  deploy.yml  test_publish.yml
assets/: player.xcf
assets/hexes/: jungle.xcf
assets/requires/: coin.xcf  discard.xcf  machete.xcf  paddle.xcf  remove.xcf
docs/source/: conf.py
examples/: vec_env_comparison.py
graphs/arch-x86_64/branch-main/cpu-AMD Ryzen 5 4500U with Radeon Graphics/machine-IdeaPad/num_cpu-6/numpy-2.2/os-Linux 6.13.3-arch1-1/python-3.13/ram-7482024/: benchmarks.TimeEnvs.peakmem_runner.json  benchmarks.TimeEnvs.time_reset.json  benchmarks.TimeEnvs.time_run.json  benchmarks.TimeEnvs.time_sample.json  summary.json
graphs/summary/: benchmarks.TimeEnvs.peakmem_runner.json  benchmarks.TimeEnvs.time_reset.json  benchmarks.TimeEnvs.time_run.json  benchmarks.TimeEnvs.time_sample.json
include/: barrier.h  environment.h  render.h  runner.h
module_tree/: __init__.py
pytest/: test_rendering.py  test_vec_env.py
src/: environment.cpp  map.cpp  render.cpp
